--- a/index.html
+++ b/index.html
@@ -1,71 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Servicios</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            background-color: #f4f4f9;
-            color: #333;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
         }
         header {
-            background-color: #FF462D; /* Color de Kyndryl */
-            color: white;
+            background-color: #d32f2f;
+            color: #fff;
+            text-align: center;
             padding: 20px 0;
-            margin-bottom: 30px;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
         }
         .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-        .service-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            max-width: 1200px;
+            margin: 20px auto;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
             gap: 20px;
         }
-        .service {
-            background: white;
-            border: 1px solid #ddd;
+        .card {
+            background-color: #fff;
             border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 250px;
             text-align: center;
-            transition: transform 0.2s;
+            padding: 20px;
+            transition: transform 0.3s, box-shadow 0.3s; /* Animación */
         }
-        .service:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        .card:hover {
+            transform: scale(1.05); /* Efecto de aumento */
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más intensa */
         }
-        .service img {
-            width: 80px;
-            height: 80px;
-            margin-bottom: 15px;
+        .card img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 4px;
+            transition: transform 0.3s; /* Animación */
         }
-        .service a {
+        .card:hover img {
+            transform: scale(1.1); /* Aumentar el tamaño del icono */
+        }
+        .card h2 {
+            color: #333;
+            font-size: 1.5em;
+        }
+        .card p {
+            color: #666;
+            margin: 10px 0;
+        }
+        .card a {
             display: inline-block;
-            margin-top: 10px;
-            padding: 10px 20px;
-            color: white;
-            background-color: #FF462D; /* Color de Kyndryl */
             text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.2s;
+            color: #fff;
+            background-color: #d32f2f;
+            padding: 10px 20px;
+            border-radius: 4px;
+            font-size: 1em;
+            transition: background-color 0.3s; /* Animación */
         }
-        .service a:hover {
-            background-color: #D63E27; /* Versión más oscura del color */
+        .card a:hover {
+            background-color: #b71c1c; /* Cambiar color al pasar el mouse */
         }
         footer {
-            margin-top: 50px;
-            font-size: 0.9em;
-            color: #666;
+            text-align: center;
+            margin: 20px 0;
+            color: #888;
         }
     </style>
 </head>
@@ -75,31 +81,29 @@
         <p>Accede rápidamente a los servicios disponibles</p>
     </header>
     <div class="container">
-        <div class="service-list">
-            <div class="service">
-                <img src="img/portainer.png" alt="Portainer">
-                <h2>Portainer</h2>
-                <p>Gestiona tus contenedores de Docker.</p> <!-- Eliminé "fácilmente" -->
-                <a href="/portainer/">Ir a Portainer</a>
-            </div>
-            <div class="service">
-                <img src="img/jenkins.png" alt="Jenkins">
-                <h2>Jenkins</h2>
-                <p>Automatiza tus pipelines de CI/CD.</p>
-                <a href="/jenkins/">Ir a Jenkins</a>
-            </div>
-            <div class="service">
-                <img src="img/zabbix.png" alt="Zabbix">
-                <h2>Zabbix</h2>
-                <p>Monitoreo de infraestructura y sistemas.</p>
-                <a href="/zabbix/">Ir a Zabbix</a>
-            </div>
-            <div class="service">
-                <img src="img/owncloud.png" alt="OwnCloud">
-                <h2>OwnCloud</h2>
-                <p>Almacenamiento personal en la nube.</p>
-                <a href="/owncloud/">Ir a OwnCloud</a>
-            </div>
+        <div class="card">
+            <img src="img/jenkins.png" alt="Jenkins">
+            <h2>Jenkins</h2>
+            <p>Automatiza tus pipelines de CI/CD.</p>
+            <a href="/jenkins/">Ir a Jenkins</a>
+        </div>
+        <div class="card">
+            <img src="img/portainer.png" alt="Portainer">
+            <h2>Portainer</h2>
+            <p>Gestiona tus contenedores y Docker desde una interfaz.</p>
+            <a href="/portainer/">Ir a Portainer</a>
+        </div>
+        <div class="card">
+            <img src="img/zabbix.png" alt="Zabbix">
+            <h2>Zabbix</h2>
+            <p>Monitoreo de infraestructura y sistemas.</p>
+            <a href="/zabbix/">Ir a Zabbix</a>
+        </div>
+        <div class="card">
+            <img src="img/owncloud.png" alt="OwnCloud">
+            <h2>OwnCloud</h2>
+            <p>Almacenamiento personal en la nube.</p>
+            <a href="/owncloud/">Ir a OwnCloud</a>
         </div>
     </div>
     <footer>
@@ -107,3 +111,4 @@
     </footer>
 </body>
 </html>
+
